# blocklyGPT

./: README.md  package-lock.json  package.json  pyproject.toml
backend/functions/: auth.py  chat.py  fine_tuning_tasks.jsonl  fine_tuning_tasks_readme.txt  graphic.py  libraries.py  management.py  task.py
backend/templates/: base.html
django_project_conf/: settings.py
frontend/: .env.example  index.html
frontend/src/: index.tsx
frontend/src/assets/robots/: index.tsx
frontend/src/components/: MainCard.tsx  ToastContainer.tsx
frontend/src/components/Logo/: index.tsx
frontend/src/layout/MainLayout/: index.tsx
frontend/src/menu-items/: define.ts  homepage.ts  management.ts
frontend/src/pages/: changePassword.tsx
frontend/src/pages/actions/: detailAction.tsx  formAction.tsx  listActions.tsx  types.ts
frontend/src/pages/chat/: chatWrapper.tsx  customStyle.css  index.tsx  rightPanel.tsx  splittedLayout.tsx  utils.tsx
frontend/src/pages/faq/: index.tsx
frontend/src/pages/graphic/: index.tsx  rightPanel.tsx  splittedLayout.tsx  type.ts
frontend/src/pages/homepage/: index.tsx
frontend/src/pages/locations/: detailLocation.tsx  formLocation.tsx  listLocations.tsx  types.ts
frontend/src/pages/myrobots/: detailMyRobot.tsx  formMyRobot.tsx  listMyRobots.tsx
frontend/src/pages/objects/: detailObject.tsx  formObject.tsx  listObjects.tsx  types.ts
frontend/src/routes/: MainRoutes.tsx  ProtectedRoute.tsx
frontend/src/services/: api.ts  endpoints.ts
frontend/src/store/: index.ts
frontend/src/utils/: constants.ts  date.ts  messages.ts
(+22 files in other folders)
