[tool.poetry]
name = "blocklyGPT"
version = "0.0.2"
description = "Pharmaceutical Robotic and AI System for End"
authors = ["Luigi Gargioni <luigi.gargioni@gmail.com>"]
maintainers = ["Luigi Gargioni <luigi.gargioni@gmail.com>"]
readme = "README.md"
homepage = "http://localhost:3000/"
repository = "https://github.com/luigigargioni/blocklyGPT"
documentation = "https://github.com/luigigargioni/blocklyGPT#readme"
packages = [
    { include="poetry_scripts", from="./backend" },
]

[tool.poetry.scripts]
start = "backend.poetry_scripts.server:start"
collectstatic = "backend.poetry_scripts.server:collectstatic"
poetryup = "backend.poetry_scripts.server:poetryup"
migrate = "backend.poetry_scripts.server:migrate"
makemigrations = "backend.poetry_scripts.server:makemigrations"

[tool.poetry.dependencies]
django = "^5.0.6"
django-cors-headers = "^4.3.1"
django-mysql = "^4.13.0"
numpy = "^1.26.4"
openai = "^1.34.0"
opencv-python = "^4.10.0.82"
pillow = "^10.3.0"
python = ">=3.10,<3.12"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
# pywin32 = "^306"
rapidfuzz = "^3.9.3"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
poetry-plugin-up = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"